--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <br><br>
                     ¡Recuerda que agregar un avatar es completamente opcional!
                 </p>
-                <img src="assets/Sign In.png" alt="Pantalla de registro">
+                <img src="/PortfolioManagerManualUsuario/assets/Sign In.png" alt="Pantalla de registro">
             </div>
         </div>
 
@@ -83,7 +83,7 @@
                     <br><br>
                     ¡No olvides incluir algo de renta fija para diversificar tu inversión!
                 </p>
-                <img src="assets/Create Portfolio.png" alt="Pantalla para crear portfolio">
+                <img src="/PortfolioManagerManualUsuario/assets/Create Portfolio.png" alt="Pantalla para crear portfolio">
             </div>
         </div>
 
@@ -98,7 +98,7 @@
                     otros son creaciones de usuarios como tú.
                 </p>
             </div>
-            <img src="assets/Community.png" alt="CommunityScreenshot">
+            <img src="/PortfolioManagerManualUsuario/assets/Community.png" alt="CommunityScreenshot">
         </div>
 
         <div class="row">
